k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  namespace: edgeflow
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 3000       # Port you want to expose externally
      targetPort: 80   # Container port defined in pod spec
  type: NodePort       # Use NodePort for Minikube access
